--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.103.0
 uvicorn[standard]==0.23.2
 pydantic==2.4.2
+pydantic-core==2.10.1
 pydantic-settings==2.0.3
 cloudinary==1.36.0
 python-dotenv==1.0.0
