Fix: Update frontend config for Vercel deployment with correct backend URL

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
 # Frontend Environment Variables for Production
 
-# Backend API URL - Update this with your Render backend URL after deployment
-NEXT_PUBLIC_API_URL=https://your-backend-app.onrender.com
+# Backend API URL - Render backend URL
+NEXT_PUBLIC_API_URL=https://stylo-backend-a5kb.onrender.com
