--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,7 @@ python-dotenv==1.0.0
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 requests==2.31.0
+sentence-transformers==2.7.0
+numpy==1.26.4
+webcolors==1.13
+colormath==3.0.0
