--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,5 @@ sentence-transformers==2.7.0
 numpy==1.26.4
 webcolors==1.13
 colormath==3.0.0
+torch==2.9.1+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
