--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,4 +13,5 @@ numpy==1.26.4
 webcolors==1.13
 colormath==3.0.0
 torch==2.9.1+cpu
+httpx==0.24.1
 --extra-index-url https://download.pytorch.org/whl/cpu
