--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,4 +14,6 @@ webcolors==1.13
 colormath==3.0.0
 torch==2.8.0+cpu
 httpx==0.24.1
+redis==5.0.1
+cachetools==5.3.2
 --extra-index-url https://download.pytorch.org/whl/cpu
