Fix AI security, cloud sync stability, and backend cleanup

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@ pydantic-core==2.10.1
 pydantic-settings==2.0.3
 cloudinary==1.36.0
 python-dotenv==1.0.0
-sqlalchemy==2.0.23
+sqlalchemy==1.4.50
 psycopg2-binary==2.9.9
 requests==2.31.0
 sentence-transformers==2.7.0
@@ -16,4 +16,8 @@ torch==2.8.0+cpu
 httpx==0.24.1
 redis==5.0.1
 cachetools==5.3.2
+passlib[argon2]==1.7.4
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
+argon2-cffi==23.1.0
 --extra-index-url https://download.pytorch.org/whl/cpu
