--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,9 @@ pydantic-core==2.10.1
 pydantic-settings==2.0.3
 cloudinary==1.36.0
 python-dotenv==1.0.0
-sqlalchemy==1.4.50
+sqlalchemy[asyncio]==2.0.23
 psycopg2-binary==2.9.9
+asyncpg==0.29.0
 requests==2.31.0
 sentence-transformers==2.7.0
 numpy==1.26.4
@@ -20,4 +21,5 @@ passlib[argon2]==1.7.4
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
 argon2-cffi==23.1.0
+greenlet==3.0.3
 --extra-index-url https://download.pytorch.org/whl/cpu
