Added Rate Limiting

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,4 +22,5 @@ python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
 argon2-cffi==23.1.0
 greenlet==3.0.3
+slowapi==0.1.9
 --extra-index-url https://download.pytorch.org/whl/cpu
