--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.23.2
 pydantic==2.4.2
 pydantic-core==2.10.1
 pydantic-settings==2.0.3
+email-validator==2.1.0
 cloudinary==1.36.0
 python-dotenv==1.0.0
 sqlalchemy[asyncio]==2.0.23
