--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -8,6 +8,7 @@ services:
     branch: main
     buildCommand: "./build.sh"
     startCommand: "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+    healthCheckPath: "/health"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.9
